--- a/sections/aleem-banner.liquid
+++ b/sections/aleem-banner.liquid
@@ -40,9 +40,11 @@
     <div class="aleem-banner__content">
         <a href="#">{{ section.settings.logo_headline}}</a>
         <p>{{section.settings.logo_tagline}}</p>
+        {% comment %}
         <a href="{{section.settings.button_url_top}}">{{section.settings.button_text_top}}</a>
+        {% endcomment %}
     </div>
-</div>
+</section>
 
 <style>
 .aleem-banner{
