--- a/assets/interview-style.css
+++ b/assets/interview-style.css
@@ -152,7 +152,7 @@
   display: flex;
 }
 .color li span {
-  isplay: block;
+  display: block;
   width: 5px;
   background: yellow;
   border-right: 1px solid black;
