--- a/sections/aleem-products-grid.liquid
+++ b/sections/aleem-products-grid.liquid
@@ -1,43 +1,43 @@
 {% schema %}
-{
-  "name": "Aleem Products Grid",
-  "settings": [
-    {
-      "type": "product",
-      "id": "product_1",
-      "label": "Product 1"
-    },
-    {
-      "type": "product",
-      "id": "product_2",
-      "label": "Product 2"
-    },
-    {
-      "type": "product",
-      "id": "product_3",
-      "label": "Product 3"
-    },
-    {
-      "type": "product",
-      "id": "product_4",
-      "label": "Product 4"
-    }, {
-      "type": "product",
-      "id": "product_5",
-      "label": "Product 5"
-    }, {
-      "type": "product",
-      "id": "product_6",
-      "label": "Product 6"
-    }
-  ],
-  "presets": [
-    {
-      "name": "Aleem Products Grid",
-      "category": "Custom Products Grid"
-    }
-  ]
-}
+  {
+    "name": "Aleem Products Grid",
+    "settings": [
+      {
+        "type": "product",
+        "id": "product_1",
+        "label": "Product 1"
+      },
+      {
+        "type": "product",
+        "id": "product_2",
+        "label": "Product 2"
+      },
+      {
+        "type": "product",
+        "id": "product_3",
+        "label": "Product 3"
+      },
+      {
+        "type": "product",
+        "id": "product_4",
+        "label": "Product 4"
+      }, {
+        "type": "product",
+        "id": "product_5",
+        "label": "Product 5"
+      }, {
+        "type": "product",
+        "id": "product_6",
+        "label": "Product 6"
+      }
+    ],
+    "presets": [
+      {
+        "name": "Aleem Products Grid",
+        "category": "Custom Products Grid"
+      }
+    ]
+  }
 {% endschema %}
 
 <section class="section2">
@@ -61,8 +61,7 @@
                   src="{{  product.featured_image | remove_first: 'files/' | file_img_url:'large' }}"
                   alt="{{ product.title }}"
                   width="100%"
-                  height="100%"
-                >
+                  height="100%">
               </a>
             </div>
           </div>
@@ -84,8 +83,7 @@
                 src=""
                 alt=""
                 width="100%"
-                height="100%"
-              >
+                height="100%">
             </div>
           </div>
           <div class="col-6">
@@ -116,8 +114,7 @@
                   <select
                     class="product-variant-item-select"
                     name=""
-                    id="product-sizes"
-                  ></select>
+                    id="product-sizes"></select>
                   <span class="border-right"></span>
                 </div>
               </div>
@@ -127,15 +124,10 @@
         <button
           id="popup-add-to-cart"
           class="add-to-cart-btn mt-4 custom-button button-black"
-          type="button"
-        >
+          type="button">
           ADD TO CART
         </button>
       </div>
     </div>
   </div>
 </section>
-
-{% comment %}
-  START OF SCRIPT
-{% endcomment %}
