--- a/sections/aleem-banner.liquid
+++ b/sections/aleem-banner.liquid
@@ -72,6 +72,7 @@
 }
 {% endschema %}
 
+{% comment %} START OF DESIGN {% endcomment %}
 <section class="section1">
   <div class="top-banner py-4 mb-5 mb-md-0">
     <div class="container">
@@ -93,6 +94,7 @@
                   </path>
                 </svg>
               </span>
+              
               <span id="mobile-menu-close" class="d-none">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -137,6 +139,7 @@
     </div>
   </div>
 
+  {% comment %} TOP BANNER {% endcomment %}
   <div class="row d-md-block d-none mx-0">
     <div class="col-12">
       <img
@@ -148,6 +151,7 @@
     </div>
   </div>
 
+  {% comment %} MAIN HEADLINE AND BOTTOM BANNER {% endcomment %}
   <div class="row pos-rel text-center text-md-start mx-0">
     <div class="col-md-5 offset-md-1 p-md-3 p-xl-5">
       <h1 class="mb-3 mb-md-4">{{ section.settings.main_headline }}</h1>
@@ -175,6 +179,7 @@
     </div>
   </div>
 
+  {% comment %} TEXT BELOW BANNER {% endcomment %}
   <div class="belowbanner-txt">
     <div class="container">
       <div class="row">
