--- a/assets/interview-style.css
+++ b/assets/interview-style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lustria&display=swap");
 
+/* BANNER SECTION */
+
 .top-banner {
   background: #f5f5f5;
 }
 
+/* Button Style */
 .custom-button {
   border: none;
   height: 44px;
@@ -25,13 +28,6 @@
   clip-path: inset(0 100% 0 0);
   transition: clip-path 0.3s ease;
   z-index: -1;
-}
-
-.tagline {
-  font-size: 16px;
-  line-height: 14px;
-  font-family: "Jost";
-  color: black;
 }
 
 .custom-button:hover::after {
@@ -71,6 +67,7 @@
   color: black;
 }
 
+/* Headings and Taglines */
 .section1 h1 {
   font-size: 70px;
   line-height: 70px;
@@ -83,6 +80,13 @@
   line-height: 28px;
   font-weight: 400;
   font-family: "Jost";
+}
+
+.tagline {
+  font-size: 16px;
+  line-height: 14px;
+  font-family: "Jost";
+  color: black;
 }
 
 .shopnow-btn {
@@ -294,6 +298,8 @@
 .section2 {
   margin: 50px 0px;
 }
+
+/* CSS for different screen sizes */
 
 @media only screen and (max-width: 1439px) {
   .section1 h1 {
